--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@ html, body {
 
 #sketch {
   margin: 0;
+  margin-top:-50px;
+  margin-bottom: -150px;
   display: flex;
 
   /* This centers our sketch horizontally. */
@@ -11,4 +13,14 @@ html, body {
 
   /* This centers our sketch vertically. */
   align-items: center;
+}
+
+h1 {
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#text {
+  text-align: center;
 }
